--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A solution for keeping track of your medication regimen",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "webpack serve --mode development --open",
+    "server": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
