--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development --open",
+    "devStart": "nodemon server/server.js",
     "server": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "mongoose": "^8.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,6 +25,7 @@
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
+    "nodemon": "^3.0.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.0"
