--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.0.3",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "style-loader": "^3.3.4",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.0"
