--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development --open",
-    "devStart": "nodemon server/server.js",
+    "build": "webpack --mode production",
+    "serverStart": "nodemon server/server.js",
     "server": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
